--- a/src/App.css
+++ b/src/App.css
@@ -157,6 +157,12 @@ section p {
   background-color: #fdb338;
   border-radius: 2px;
 }
+.listing-search-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 /* .App {
   text-align: center;
