--- a/src/App.css
+++ b/src/App.css
@@ -154,7 +154,7 @@ section p {
 /******** LISTINGS PAGE  ******/
 .listing-result {
   border: 1px solid gray;
-  background-color: #fdb338;
+  background-color: #f5bd63;
   border-radius: 2px;
 }
 .listing-search-div {
