--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,8 @@ h1,
 h3 {
   font-family: "Dancing Script", cursive;
 }
-.link {
-  color: #fff;
-}
-.link:hover {
-  color: #00f;
+Link {
+  text-decoration: none !important;
 }
 
 button {
@@ -35,17 +32,20 @@ button {
 }
 .logo-text {
   font-family: "Dancing Script", cursive;
-  color: white;
+  color: #1f203a;
+  font-size: 30px !important;
+  font-weight: bold;
 }
 
 .menu-items {
   display: flex;
   gap: 20px;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   border-bottom: 3px solid gray !important;
   background-color: #1f203a;
   color: white;
+  margin: 0px;
 }
 .menu-items2 {
   width: 400px;
@@ -156,55 +156,6 @@ section p {
   flex-direction: column;
   justify-content: space-between;
 }
-
-/******** LISTINGS PAGE  ******/
-.listing-result {
-  border: 1px solid gray;
-  background-color: #f5bd63;
-  border-radius: 2px;
+.nav-menu-items {
+  text-decoration: none !important;
 }
-.listing-search-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
